# zephyr_imu_logger_app

./: .gitignore  CMakeLists.txt  prj.conf  west.yml
app/: CMakeLists.txt  flash_esp32  prj.conf
app/boards/: blackpill_f401cc.overlay  esp32.overlay
app/src/: main.c
app/src/modules/: icm20948.c
app/src/modules/common/: i2c_utils.c
app/src/modules/common/include/: i2c_utils.h
boards/: blackpill_f401cc.overlay  esp32.overlay
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/icm20948/: CMakeLists.txt  Kconfig  icm20948.c  icm20948.h
dts/bindings/sensor/: invensense,icm20948  invensense,icm20948.yml
include/app/drivers/sensor/: icm20948.h
src/: main.c
src/modules/: icm20948.c  sdcard.c
src/modules/include/: icm20948-register-map.h  icm20948.h  sdcard.h
